--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-.vscode/
-os.getcwd()
+# Byte-compiled / optimized / DLL files
 __pycache__/
-os.path.realpath(__file__)20210416-202900
+.vscode/
+os.getcwd()/
+os.path.realpath(__file__)20210416-202900/
