--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "TinyML_py/tensorflow-lite"]
 	path = TinyML_py/tensorflow-lite
-	url = https://github.com/yunho0130/tensorflow-lite.git
+	url = https://github.com/yunho0130/tensorflow-lite
